# SystemXplorer

./: .gitignore  README.md  main.py  pyproject.toml
tabs/: battery_info.py  cpu.py  cpu_info.py  disk.py  disk_info.py  mem.py  mem_info.py  network_info.py  os_info.py  processes.py  processes_info.py  system.py
