[tool.poetry]
name = "system-xplorer"
version = "0.1.0"
description = "a comprehensive system information summary tool developed as a part of the OS Lab project."
authors = ["deadaf <gahlyanrohit18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "system_xplorer"}]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.6"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
